# arnaux

./: .editorconfig  .gitignore  README.md  arnaux.cabal  bower.json  package-lock.json  package.json  stack.yaml
app/: Main.hs
logs/: .gitignore
src/: Config.hs  Connection.hs  Effect.hs  Envelope.hs  Game.hs  Identity.hs  Main.purs  Message.hs  Messages.purs  Query.hs  ServerApplication.hs  ServiceIdentity.hs  State.hs  State.purs  StateQuery.hs  Validation.hs  WebSocketServer.hs
src/Network/: WebSocketServer.js  WebSocketServer.purs
test/: clientOne.js  clientTwo.js
