name: arnaux
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/arnaux#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/arnaux

library
    exposed-modules:
        WebSocketServer
        Envelope
        Identity
        Message
        State
        ServerApplication
        Connection
        Query
        StateQuery
        Validation
        Effect
    build-depends:
        base >=4.7 && <5,
        websockets -any,
        bytestring -any,
        text -any,
        aeson -any,
        containers -any,
        wai -any,
        warp -any,
        wai-websockets -any,
        http-types -any,
        uuid -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -O2 -j2 -Wall -Werror -Wmissing-import-lists -Wmissing-exported-signatures -Wincomplete-uni-patterns -Wincomplete-record-updates -Widentities -Wredundant-constraints

executable arnaux-exe
    main-is: Main.hs
    build-depends:
        base -any,
        arnaux -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -Werror -j2 -Wmissing-import-lists -Wmissing-exported-signatures -Wincomplete-uni-patterns -Wincomplete-record-updates -Widentities -Wredundant-constraints

test-suite arnaux-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        arnaux -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
